# sosia

./: .gitignore  LICENSE  README.md
chart/: Chart.yaml  values.yaml
sosia/: Cargo.toml
sosia/src/: main.rs
sosia/src/adapters/: api_ad.rs  logger_ad.rs  mod.rs  postgres_ad.rs
sosia/src/configuration/: api_conf.rs  logger_conf.rs  mod.rs  postgres_conf.rs  timezone_conf.rs
sosia/src/configuration/po/: log_format_po.rs  mod.rs
sosia/src/domain/: configuration_dom.rs  database_dom.rs  date_dom.rs  logger_message_dom.rs  mod.rs  namespace_dom.rs  secret_dom.rs  secret_status_dom.rs
sosia/src/domain/po/: logger_message_type_po.rs  mod.rs
sosia/src/services/: configuration_srv.rs  logger_svc.rs  mod.rs
