[package]
name = "sosia"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
deadpool-postgres = "0.14.0"
tokio = { version = "1.40.0", features = ["full"] }
paperclip = { version = "0.8", features = ["actix4"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.0"
once_cell = "1.20.1"
log = "0.4.22"
colored = "2.0"
atty = "0.2.14"
